@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-1.8.9_pre30 (20 Mar 2002)
+
+  20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: emerge
+  --emptytree now works again and I added a new --nodeps option to emerge as
+  well.
+
 *portage-1.8.9_pre29 (20 Mar 2002)
 
   20 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: CONTENTS files
